--- a/glide.yaml
+++ b/glide.yaml
@@ -7,3 +7,7 @@ import:
 - package: github.com/spf13/viper
 - package: github.com/fatih/color
   version: ^0.1.0
+- package: github.com/stretchr/testify
+  version: ^1.1.3
+  subpackages:
+  - assert
