--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ before_install:
   - go get github.com/onsi/gomega
   - go get github.com/onsi/ginkgo
   - go get github.com/Masterminds/glide
+  - go get github.com/alecthomas/gometalinter
+  - gometalinter --install --update
 
 install: glide install
 
