fix(Makefile,.travis.yml) : changed test-all
* add doc-hunt task
* rename checker to gometalinter
* rewrite travils file

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ go:
   - 1.6
 
 before_install:
-  - wget -O ~/doc-hunt https://github.com/antham/doc-hunt/releases/download/v1.0.0/doc-hunt_linux_amd64
-  - chmod 777 ~/doc-hunt
+  - wget -O doc-hunt https://github.com/antham/doc-hunt/releases/download/v1.0.0/doc-hunt_linux_amd64
+  - chmod 777 doc-hunt
+  - export PATH=$PATH:$PWD/doc-hunt
   - go get github.com/onsi/gomega
   - go get github.com/onsi/ginkgo
   - go get github.com/Masterminds/glide
@@ -15,7 +16,7 @@ before_install:
 install: glide install
 
 script:
-  make test-all && dochunt check -e
+  make test-all
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
