ref(regexp) : use PCRE instead of golang default
we switch from golang regexp to PCRE to add much more configuration possibility

--- a/glide.yaml
+++ b/glide.yaml
@@ -13,3 +13,6 @@ import:
   - assert
 - package: github.com/chzyer/readline
   version: ^1.3.0
+- package: github.com/glenn-brown/golang-pkg-pcre
+  subpackages:
+  - src/pkg/pcre
